--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,21 +19,22 @@
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
 		<h4>Projects</h4>
-		{{#if projects.min }}
-		Min!<button class="likeBtn">Like</button>
+		{{#if min}}
+			Min!<button class="likeBtn">Like</button>
 		{{else}}
-		{{#each projects}}
-			<div class="project" id="{{id}}">
-				<div class="thumbnail">
-					<a href="/project/{{id}}">
-						<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
-						<h4>{{title}}</h4>
-					</a>
-					<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
-					<div class="details"></div>
+			{{min}}
+			{{#each projects}}
+				<div class="project" id="{{id}}">
+					<div class="thumbnail">
+						<a href="/project/{{id}}">
+							<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
+							<h4>{{title}}</h4>
+						</a>
+						<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
+						<div class="details"></div>
+					</div>
 				</div>
-			</div>
-		{{/each}}
+			{{/each}}
 		{{/if}}
 
 
